--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     }
 
     document.addEventListener('DOMContentLoaded', () => {
-      liff.init({ liffId: "2005254357-zKma9BZk" })
+      liff.init({ liffId: "2008349130-5G4RZaQQ" })
       .then(() => console.log("LIFF初期化成功"))
       .catch(err => console.error("LIFF初期化失敗", err));
     });
