--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       if (formSelections.body.length === 0) return alert("身体のお悩みを選択してください。");
 
       const text =
-`≪カウンセリング予約フォーム≫
+`≪カウンセリング≫
 【お名前】${name}
 【電話番号】${phone}
 【性別】${formSelections.gender}
